fixed alignment

--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ header{
     font-size: 25px;
     color: #737272;
     padding-top: 15px;
+    text-align: center;
 
 
 }
@@ -200,6 +201,7 @@ header{
     color: #737272;
    font-weight: 400;
    font-size: 16px;
+   text-align: center;
 }
 
 .skill-img1{
